<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:padding="24dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title_mypage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_mypage"
            android:textSize="20sp"
            android:textColor="#B388FF"
            android:textStyle="bold"
            android:layout_marginBottom="16dp"/>

        <!-- 상단 프로필 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                app:srcCompat="@drawable/ic_mypage" />


            <TextView
                android:id="@+id/tvNickname"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nickname"
                android:textSize="18sp"
                android:paddingStart="12dp"
                android:textColor="#000000" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="64dp"
                android:layout_height="64dp"
                app:srcCompat="@drawable/ic_next" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#DDDDDD"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"/>

        <!-- 항목 -->
        <TextView
            style="@style/SectionTitle"
            android:layout_width="363dp"
            android:layout_height="wrap_content"
            android:text="@string/menu_favorite" />

        <TextView
            style="@style/SectionTitle"
            android:layout_width="363dp"
            android:layout_height="53dp"
            android:text="@string/menu_review" />

        <TextView
            style="@style/SectionTitle"
            android:layout_width="363dp"
            android:layout_height="51dp"
            android:text="@string/menu_activity" />

        <TextView
            style="@style/SectionTitle"
            android:layout_width="363dp"
            android:layout_height="47dp"
            android:text="@string/menu_reservation" />

        <View
            android:layout_width="match_parent"
            android:layout_height="12dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:background="#DDDDDD" />

        <TextView
            style="@style/SectionLabel"
            android:layout_width="364dp"
            android:layout_height="51dp"
            android:text="@string/section_inquiry" />

        <TextView
            style="@style/SectionTitle"
            android:layout_width="364dp"
            android:layout_height="55dp"
            android:text="@string/menu_cs" />

        <TextView
            style="@style/SectionTitle"
            android:layout_width="364dp"
            android:layout_height="49dp"
            android:text="@string/menu_inquiry" />

        <View
            android:layout_width="match_parent"
            android:layout_height="13dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:background="#DDDDDD" />

        <TextView
            style="@style/SectionLabel"
            android:layout_width="365dp"
            android:layout_height="49dp"
            android:text="@string/section_setting" />

        <LinearLayout
            android:layout_width="365dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingVertical="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/menu_alert_comment"
                android:textSize="16sp" />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="365dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingVertical="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/menu_alert_news"
                android:textSize="16sp" />

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="14dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:background="#DDDDDD" />

        <TextView
            style="@style/SectionLabel"
            android:layout_width="361dp"
            android:layout_height="48dp"
            android:text="@string/section_account" />

        <TextView
            style="@style/SectionTitle"
            android:layout_width="361dp"
            android:layout_height="46dp"
            android:text="@string/menu_logout" />

        <TextView
            style="@style/SectionTitle"
            android:layout_width="361dp"
            android:layout_height="48dp"
            android:text="@string/menu_withdraw" />

    </LinearLayout>
</ScrollView>
